chia cot san pham done

--- a/Ung_dung_Khach_hang_Sach/test.html
+++ b/Ung_dung_Khach_hang_Sach/test.html
@@ -25,7 +25,9 @@
 
     <!-- =============================== -->
         <div class="col-md-4">
-            <img src="http://localhost:1001/${Dien_thoai.Ma_so}.png" alt="">
+            <div>
+                 <img src="http://localhost:1001/${Dien_thoai.Ma_so}.png" alt="hình sách">
+            </div>
             <div>
                 <h4 class="text-primary">${Dien_thoai.Ten}</h5>
                 <p class="text-danger">Đơn giá Bán: ${Tao_Chuoi_The_hien_So_nguyen_duong(Dien_thoai.Don_gia_Ban)} đ</p>
