code xong cap nhat the loai, doi ten Dien thoai => Sach

--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh.html
@@ -100,7 +100,7 @@
             Th_PET.innerHTML = `<img src="http://localhost:1001/${Cua_hang.Ma_so}.png" class="float-left" />
         <h2 class="text-center text-primary">${Cua_hang.Ten}
             <br/>
-            <small style="font-size:16px" class="text-success"><i>Địa chỉ: ${Cua_hang.Dia_chi} </br>Điện thoại: ${Cua_hang.Dien_thoai}</i></small>
+            <small style="font-size:16px" class="text-success"><i>Địa chỉ: ${Cua_hang.Dia_chi} </br>Sách: ${Cua_hang.Dien_thoai}</i></small>
         </h2>`
             if (sessionStorage.getItem("Nguoi_dung")) {
                 var Kq = JSON.parse(sessionStorage.getItem("Nguoi_dung"))
