--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Tac_gia.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Tac_gia.html
@@ -123,17 +123,17 @@
             Hien_thi_Trang(trang)
         }
         Th_Them.onclick = () => {
-            var trang = "MH_Them_The_loai.html"
+            var trang = "MH_Them_The_loai_Sach.html"
             Hien_thi_Trang(trang)
 
         }
         Th_Sua.onclick=()=>{
-            var trang = "MH_Sua_The_loai.html"
+            var trang = "MH_Sua_The_loai_Sach.html"
             XL_Danh_sach_Chon(trang)
         }
 
         Th_Xoa.onclick=()=>{
-            var trang = "MH_Xoa_The_loai.html"
+            var trang = "MH_Xoa_The_loai_Sach.html"
             XL_Danh_sach_Chon(trang)
         }
         Th_Thanh_ly.onclick=()=>{
