--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_Dien_thoai.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_Dien_thoai.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            PHỤC HỒI THANH LÝ ĐIỆN THOẠI
+            PHỤC HỒI THANH LÝ Sách
         </div>
     </div>
     <div class="container-fluid">
@@ -78,7 +78,7 @@
             var Kq = XL_Phuc_hoi_Sach()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Phục hồi thành công Điện thoại";
+                Th_Thong_bao.innerHTML = "Phục hồi thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
