--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_Sach.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_Sach.html
@@ -28,7 +28,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            THÊM ĐIỆN THOẠI MỚI
+            THÊM Sách MỚI
         </div>
     </div>
     <div class="container-fluid">
@@ -139,7 +139,7 @@
         Th_Dong_y.onclick = () => {
             var Kq=XL_Ghi_Them()
             if(Kq=="OK"){
-                Th_Thong_bao.innerHTML="Thêm thành công Điện thoại mới";
+                Th_Thong_bao.innerHTML="Thêm thành công Sách mới";
                 
             }
         }
