--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_The_loai_Sach.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_The_loai_Sach.html
@@ -124,7 +124,7 @@
         Th_Dong_y.onclick = () => {
             var Kq = XL_Ghi_Them_The_loai()
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Thêm thành công Điện thoại mới";
+                Th_Thong_bao.innerHTML = "Thêm thành công Sách mới";
             }
         }
 
