--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thong_ke_Doanh_thu.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thong_ke_Doanh_thu.html
@@ -133,7 +133,7 @@
                 }
             },
             subtitle: {
-                text: 'Cửa hàng Điện thoại Thu Trân'
+                text: 'Cửa hàng Sách Thu Trân'
             },
             xAxis: {
                 categories: Du_lieu_x
