--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            XÓA ĐIỆN THOẠI
+            XÓA Sách
         </div>
     </div>
     <div class="container-fluid">
@@ -75,7 +75,7 @@
             var Kq = XL_Xoa_Sach()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Xóa thành công Điện thoại";
+                Th_Thong_bao.innerHTML = "Xóa thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
