--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cửa hàng Điện thoại PET</title>
+    <title>Cửa hàng Sách PET</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,7 +65,7 @@
             Th_PET.innerHTML = `<img src="http://localhost:1001/${Cua_hang.Ma_so}.png" class="float-left" />
         <h2 class="text-center text-primary">${Cua_hang.Ten}
             <br/>
-            <small style="font-size:16px" class="text-success"><i>Địa chỉ: ${Cua_hang.Dia_chi} </br>Điện thoại: ${Cua_hang.Dien_thoai}</i></small>
+            <small style="font-size:16px" class="text-success"><i>Địa chỉ: ${Cua_hang.Dia_chi} </br>Sách: ${Cua_hang.Dien_thoai}</i></small>
         </h2>`
         }
 
