--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_Sach.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_Sach.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            CẬP NHẬT ĐIỆN THOẠI
+            CẬP NHẬT Sách
         </div>
     </div>
     <div class="container-fluid">
@@ -93,7 +93,7 @@
             var Kq = XL_Cap_Nhat_Sach()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Cập nhật thành công Điện thoại";
+                Th_Thong_bao.innerHTML = "Cập nhật thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
