--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_The_loai.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_The_loai.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            CẬP NHẬT ĐIỆN THOẠI
+            CẬP NHẬT THỂ LOẠI
         </div>
     </div>
     <div class="container-fluid">
@@ -49,7 +49,7 @@
     <script>
         Danh_sach_Cap_nhat = JSON.parse(sessionStorage.getItem("Danh_sach_Chon"))
         //console.log(Danh_sach_Cap_nhat)
-        Tao_The_hien_Cap_nhat(Th_Cha, Danh_sach_Cap_nhat)
+        Tao_The_hien_Cap_nhat_The_loai(Th_Cha, Danh_sach_Cap_nhat)
 
         function XL_Cap_Nhat_The_loai() {
             var Danh_sach_Cap_nhat = document.querySelectorAll(".CAP_NHAP")
@@ -62,38 +62,33 @@
 
                 for (var i = 0; i < The_loai.cells.length; i++) {
 
-                    if (i == 1) {
-                        Tam.push(The_loai.cells[i].childNodes[1].value)
-                    } else {
+                    if (i == 1) {            
+                        Tam.push(The_loai.cells[i].childNodes[0].value)
+                    }
+                    
+                    if(i==2){
                         Tam.push(The_loai.cells[i].childNodes[0].value)
                     }
                 }
                 var The_loai_Cap_nhat = {
-                    "Ten": Tam[0],
                     "Ma_so": Ma_so,
-                    "Don_gia_Ban": Tam[3],
-                    "Don_gia_Nhap": Tam[2],
-                    "Nhom_Sach": {
-                        "Ten": Tam[1],
-                        "Ma_so": Tam[1]
-                    }
+                    "Ten_the_loai" : Tam[0],
+                    "Mo_ta_the_loai": Tam[1]
                 }
                 //console.log(Dien_thoai_Cap_nhat)
                 Danh_sach.push(The_loai_Cap_nhat)
             })
-
             //console.log(Danh_sach)
             // Ghi Sửa  Điện thoai
             var Kq = Ghi_Cap_nhap_The_loai(Danh_sach)
             return Kq
-            
         }
 
         Th_Dong_y.onclick = () => {
-            var Kq = XL_Cap_Nhat_Sach()
+            var Kq = XL_Cap_Nhat_The_loai()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Cập nhật thành công Điện thoại";
+                Th_Thong_bao.innerHTML = "Cập nhật thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
@@ -101,7 +96,7 @@
 
         Th_Bo_qua.onclick = () => {
             sessionStorage.removeItem("Danh_sach_Chon")
-            window.location = "MH_Danh_sach_Sach.html"
+            window.location = "MH_Danh_sach_The_loai.html"
         }
 
     </script>
