--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thanh_ly_Dien_thoai.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thanh_ly_Dien_thoai.html
@@ -29,7 +29,7 @@
     </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            THANH LÝ ĐIỆN THOẠI
+            THANH LÝ Sách
         </div>
     </div>
     <div class="container-fluid">
@@ -75,7 +75,7 @@
             var Kq = XL_Thanh_ly_Sach()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Thanh lý thành công Điện thoại";
+                Th_Thong_bao.innerHTML = "Thanh lý thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
