--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thong_ke_Nhap_Xuat.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Thong_ke_Nhap_Xuat.html
@@ -127,7 +127,7 @@
                 }
             },
             subtitle: {
-                text: 'Cửa hàng Điện thoại Thu Trân'
+                text: 'Cửa hàng Sách Thu Trân'
             },
             xAxis: {
                 categories: Du_lieu_x
