cap nhat code xoa trong file DV_DU_LIEU.js

--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap.html
@@ -55,7 +55,7 @@
             var Kq = Dang_nhap_He_thong(Thong_tin)
             if ("Ma_so" in Kq) {
                 sessionStorage.setItem("Nguoi_dung", JSON.stringify(Kq))
-                window.location = 'MH_Chinh_Tac_gia.html'
+                window.location = 'MH_Chinh_The_loai.html'
             } else {
                 Th_Thong_bao.innerHTML = "Thông tin đăng nhập không hợp lệ ..."
             }
