--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_The_loai.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Sua_The_loai.html
@@ -88,7 +88,7 @@
             var Kq = XL_Cap_Nhat_The_loai()
             //console.log(Kq)
             if (Kq == "OK") {
-                Th_Thong_bao.innerHTML = "Cập nhật thành công Sách";
+                Th_Thong_bao.innerHTML = "Cập nhật thành công Thể loại";
                 sessionStorage.removeItem("Danh_sach_Chon")
 
             }
