xong them sua xoa Tac gia

--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia.html
@@ -97,9 +97,9 @@
             var Ma_so = Th_Ma_so.value
             var Ten = Th_Tac_gia.value
             var Mo_ta = Th_Mo_ta_Tac_gia.value
-            var The_loai = {
+            var Tac_gia = {
                 "Ma_so": Ma_so,
-                "Ten_Tac_gia": Ten,
+                "Tac_gia": Ten,
                 "Mo_ta_tac_gia": Mo_ta
             }
           
