--- a/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_The_loai.html
+++ b/TUAN/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_The_loai.html
@@ -51,6 +51,9 @@
                 <button type="button" class="btn btn-lg btn-outline-warning" id="Th_Xoa">
                     <i class="fa">Xóa Thể loại</i>
                 </button>
+                <button type="button" class="btn btn-lg btn-outline-info" id="Th_Phuc_hoi">
+                        <i class="fa">Phục hồi Xóa</i>
+                    </button>
                 <button type="button" class="btn btn-lg btn-outline-warning" id="Th_Thanh_ly">
                     <i class="fa">Thanh lý</i>
                 </button>
@@ -136,13 +139,13 @@
             var trang = "MH_Xoa_The_loai.html"
             XL_Danh_sach_Chon(trang)
         }
+        Th_Phuc_hoi.onclick=()=>{
+            var trang = "MH_Phuc_hoi_The_loai.html"
+            Hien_thi_Trang(trang)
+        }
         Th_Thanh_ly.onclick=()=>{
             var trang = "MH_Thanh_ly_Sach.html"
             XL_Danh_sach_Chon(trang)
-        }
-        Th_Phuc_hoi.onclick=()=>{
-            var trang = "MH_Phuc_hoi_Sach.html"
-            Hien_thi_Trang(trang)
         }
         Th_Thong_ke_Doanh_thu.onclick=()=>{
             var trang = "MH_Thong_ke_Doanh_thu.html"
