css giao dien KH

--- a/Ung_dung_Khach_hang/Giao_dien/MH_Danh_sach_Sach.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Danh_sach_Sach.html
@@ -160,7 +160,7 @@
                                     <img src="http://localhost:1001/${Sach_Chon.Ma_so}.png" />
                                 </div>
                                 <div class="col-md-6">
-                                    Thể loại: <h5 >${Sach_Chon.Nhom_Sach.Ten_the_loai}</h5>
+                                    <h3>Thể loại:</h3> <h5 >${Sach_Chon.Nhom_Sach.Ten_the_loai}</h5>
                                     Nhà xuất bản: <h5 >${Sach_Chon.Nhom_Sach.Nha_phat_hanh}</h5>
                                     Tác giả: <h5 >${Sach_Chon.Nhom_Sach.Tac_gia}</h5>
                                     Giá bán: <h5 >${Sach_Chon.Don_gia_Ban}</h5>
