--- a/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
+++ b/Ung_dung_Khach_hang/Giao_dien/MH_Chinh.html
@@ -45,9 +45,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div id="horizontalTab">
 				<ul class="resp-tabs-list">
 					<li>Tất cả</li>
-					<li id="Th_Khoa_hoc">Thể loại KH</li>
-					<li>Tác giả</li>
-					<li>Nhà phát hành</li>
+					<li>Thể loại
+						<select class="btn btn-outline-danger" onclick="Xuat_Sach_theo_The_loai(this.value)">
+							<option value="khoahoc">Khoa học</option>
+							<option value="thethao">Thể thao</option>
+							<option value="thieunhi">Thiếu nhi</option>
+							<option value="tinhcam">Tình cảm</option>
+							<option value="vanhoc">Văn học</option>
+						</select>
+					</li>
+					<li>Tác giả
+						<select class="btn btn-outline-danger" onclick="Xuat_Sach_theo_Tac_gia(this.value)">
+							<option value="ngoctrinh">Ngọc Trinh</option>
+							<option value="kimdung">Kim Dung</option>
+							<option value="nguyenanh">Nguyễn Ánh</option>
+							<option value="tohuu">Tố Hữu</option>
+							<option value="quoctuan">Quốc Tuấn</option>
+						</select>
+					</li>
+					<li>Nhà phát hành
+						<select class="btn btn-outline-danger" onclick="Xuat_Sach_theo_NPH(this.value)">
+							<option value="kimdong">Kim Đồng</option>
+							<option value="nxbtre">Nhà Xuất Bản Trẻ</option>
+							<option value="fahasha">FAHASHA</option>
+							<option value="nxbvannghe">Nhà Xuất Bản Văn Nghệ</option>
+							<option value="nxbvanhoc">Nhà Xuất Bản Văn Học</option>
+						</select>
+					</li>
 				</ul>
 				<div class="resp-tabs-container">
 					<!--/tab_one-->
@@ -59,8 +83,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									KHUNG THÔNG BÁO
 								</div>
 							</div>
+							<div class="row">
+								<div class="btn">
+									<input placeholder="Bạn muốn tìm sách gì ?" type="text" class="btn btn-outline-danger" onkeyup="KeyCode(event)" style="width:20rem"
+									    id="Th_Gia_tri_Tim">
+									<i class="fa fa-search mr-3" id="Th_Tim"></i>
+								</div>
+								<div class="btn">
+									<select class="btn btn-outline-danger" onchange="Xuat_Sach_theo_Don_gia(this.value)">
+										<option value="0-50000000">Lọc Điện thoại theo Đơn giá Bán</option>
+										<option value="0-200000">Đơn giá Bán dưới 2 triệu </option>
+										<option value="200000-400000">Đơn giá Bán lớn 2 triệu và nhỏ 4 triệu </option>
+										<option value="400000-900000">Đơn giá Bán lớn 4 triệu </option>
+									</select>
+								</div>
+								<button type="button" class="btn btn-outline" id="Th_Tang" onclick="Sap_Tang()">
+									<i class="fa fa-sort-alpha-asc"></i>
+								</button>
+								<button type="button" class="btn btn-outline" id="Th_Giam" onclick="Sap_Giam()">
+									<i class="fa fa-sort-alpha-desc"></i>
+								</button>
+							</div>
 						</div>
-						
 						<div class="container">
 							<div class="row" id="Th_Cha"></div>
 						</div>
@@ -78,18 +122,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"></div>
 					</div>
 					<!--//tab_one-->
-
-					<!--/tab_2-->
 					<div class="tab2">
-						<button id="Th_Khoa_hoc">Khoa học</button>
+
 					</div>
+					<!--/tab_2-->
+
 					<!--//tab_2-->
 
 
 				</div>
 			</div>
 
-			
+
 		</div>
 	</div>
 	<!-- //new_arrivals -->
@@ -207,22 +251,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		// 	Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
 		// }
 
-		// Th_Tim.onclick = () => {
-		// 		var gtTim = Th_Gia_tri_Tim.value;
-		// 		var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
-		// 		Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
-		// 		Th_Gia_tri_Tim.value = "";
-		// }
+		Th_Tim.onclick = () => {
+			var gtTim = Th_Gia_tri_Tim.value;
+			var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
+			Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
+			Th_Gia_tri_Tim.value = "";
+		}
 
-		// function KeyCode(event) {
-		// 		if (event.keyCode == 13) {
-		// 				var gtTim = event.target.value;
-		// 				var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
-		// 				Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
-		// 		}
-		// }
+		function KeyCode(event) {
+			if (event.keyCode == 13) {
+				var gtTim = event.target.value;
+				var Danh_sach_Sach_tim = Danh_sach_Sach.filter(x => x.Ten.toLowerCase().includes(gtTim.toLowerCase()));
+				Xuat_Danh_Sach_Tong(Danh_sach_Sach_tim, Th_Thong_bao);
+			}
+		}
 
-		// Thể loại
 
 		Th_Khoa_hoc.onclick = () => {
 			var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
@@ -304,32 +347,128 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		// 	Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
 		// }
 
-		// function Xuat_Sach_theo_Don_gia(chuoi_dieu_kien) {
-		// 		var Thanh_phan_con = chuoi_dieu_kien.split('-')
-		// 		if (Thanh_phan_con.length > 0) {
+		function Xuat_Sach_theo_Don_gia(chuoi_dieu_kien) {
+			var Thanh_phan_con = chuoi_dieu_kien.split('-')
+			if (Thanh_phan_con.length > 0) {
 
-		// 				var Danh_sach_Sach_theo_Gia = Danh_sach_Sach.filter(x => x.Don_gia_Ban >=
-		// 						Thanh_phan_con[0] &&
-		// 						x.Don_gia_Ban <= Thanh_phan_con[1])
-		// 				Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Gia, Th_Thong_bao)
-		// 		}
-		// }
+				var Danh_sach_Sach_theo_Gia = Danh_sach_Sach.filter(x => x.Don_gia_Ban >=
+					Thanh_phan_con[0] &&
+					x.Don_gia_Ban <= Thanh_phan_con[1])
+				Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Gia, Th_Thong_bao)
+			}
+		}
 
-		// function Sap_Tang() {
-		// 		// Danh_sach_Sach.sort((a,b)=>{
-		// 		//     //return a.Don_gia_Ban-b.Don_gia_Ban
-		// 		// })
-		// 		Danh_sach_Sach.sort((a, b) => a.Ten.localeCompare(b.Ten))
-		// 		Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
-		// }
+		function Xuat_Sach_theo_The_loai(theloai) {
+			switch (theloai) {
+				case 'khoahoc':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
+						"Khoa học")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'thethao':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
+						"Thể thao")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'thieunhi':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
+						"Thiếu nhi")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'tinhcam':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
+						"Tình cảm")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'vanhoc':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Ten_the_loai ==
+						"Văn học")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				default:
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+			}
+		}
 
-		// function Sap_Giam() {
-		// 		// Danh_sach_Sach.sort((a,b)=>{
-		// 		//     //return b.Don_gia_Ban-a.Don_gia_Ban 
-		// 		// })
-		// 		Danh_sach_Sach.sort((a, b) => b.Ten.localeCompare(a.Ten))
-		// 		Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
-		// }
+		function Xuat_Sach_theo_Tac_gia(tacgia) {
+			switch (tacgia) {
+				case 'ngoctrinh':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Tac_gia ==
+						"Ngọc Trinh")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'kimdung':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Tac_gia ==
+						"Kim Dung")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'nguyenanh':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Tac_gia ==
+						"Nguyễn Ánh")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'tohuu':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Tac_gia ==
+						"Tố Hữu")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'quoctuan':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Tac_gia ==
+						"Quốc Tuấn")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				default:
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+			}
+		}
+
+		function Xuat_Sach_theo_NPH(nhaphathanh) {
+			switch (nhaphathanh) {
+				case 'kimdong':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Nha_phat_hanh ==
+						"Kim Đồng")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'nxbtre':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Nha_phat_hanh ==
+						"NXB Trẻ")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'fahasha':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Nha_phat_hanh ==
+						"Fahasha")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'nxbvannghe':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Nha_phat_hanh ==
+						"NXB Văn Nghệ")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				case 'nxbvanhoc':
+					var Danh_sach_Sach_theo_Nhom = Danh_sach_Sach.filter(x => x.Nhom_Sach.Nha_phat_hanh ==
+						"NXB Văn Học")
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+					break;
+				default:
+					Xuat_Danh_Sach_Tong(Danh_sach_Sach_theo_Nhom, Th_Thong_bao)
+			}
+		}
+
+		function Sap_Tang() {
+			// Danh_sach_Sach.sort((a,b)=>{
+			//     //return a.Don_gia_Ban-b.Don_gia_Ban
+			// })
+			Danh_sach_Sach.sort((a, b) => a.Ten.localeCompare(b.Ten))
+			Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
+		}
+
+		function Sap_Giam() {
+			// Danh_sach_Sach.sort((a,b)=>{
+			//     //return b.Don_gia_Ban-a.Don_gia_Ban 
+			// })
+			Danh_sach_Sach.sort((a, b) => b.Ten.localeCompare(a.Ten))
+			Xuat_Danh_Sach_Tong(Danh_sach_Sach, Th_Thong_bao)
+		}
 
 		// Th_Tai_tap_tin.onclick = () => {
 		// 		var tap_tin = "Don_Du_tuyen.pdf"
