--- a/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Danh_sach_Tac_gia.html
+++ b/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Danh_sach_Tac_gia.html
@@ -20,7 +20,46 @@
 </style>
 
 <body>
+    <!-- <div class="container-fluid btn" id="Th_PET">
 
+    </div> -->
+    <div class="container-fluid">
+
+        <div class="float-left">
+            <button type="button" class="btn btn-lg btn-outline-danger" id="Th_Android">
+                <i class="fa fa-android"></i>
+            </button>
+            <button type="button" class="btn btn-lg btn-outline-danger" id="Th_Iphone">
+                <i class="fa fa-apple"></i>
+            </button>
+        </div>
+        <div class="float-right">
+            <div class="row">
+                <div class="btn">
+                    <input placeholder="Nhập Tên Sách ...Enter" type="text" class="btn btn-outline-danger" style="width:20rem" onkeyup="Tim_Ten_Sach(event)"
+                        id="Th_Gia_tri_Tim">
+                    <!-- <i class="fa fa-search mr-3" id="Th_Tim"></i> -->
+                </div>
+                <div class="btn">
+                    <select class="btn btn-outline-danger" onchange="Xuat_Sach_theo_Don_gia(this.value)">
+                        <option value="0-50000000">Lọc Sách theo Đơn giá Bán</option>
+                        <option value="0-1000000">Đơn giá Bán dưới 1 triệu </option>
+                        <option value="1000000-3000000">Đơn giá Bán lớn 1 triệu và nhỏ 3 triệu </option>
+                        <option value="3000000-50000000">Đơn giá Bán lớn 3 triệu </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="container-fluid btn clearfix text-right">
+        <button type="button" class="btn btn-outline" id="Th_Tang" onclick="Sap_Tang()">
+            <i class="fa fa-sort-alpha-asc"></i>
+        </button>
+        <button type="button" class="btn btn-outline" id="Th_Giam" onclick="Sap_Giam()">
+            <i class="fa fa-sort-alpha-desc"></i>
+        </button>
+    </div>
     <div class="container-fluid">
         <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
             KHUNG THÔNG BÁO
@@ -31,7 +70,9 @@
             <legend></legend>
 
             <div class="row" id="Th_Cha"></div>
+
         </fieldset>
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -44,28 +85,28 @@
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
     <script>
 
-        var Du_lieu = Doc_Danh_sach_The_loai();
-        var Danh_sach_The_loai = Du_lieu.Danh_sach_The_loai
+        var Du_lieu = Doc_Danh_sach_Tac_gia();
+        var Danh_sach_Tac_gia = Du_lieu.Danh_sach_Tac_gia
         
-        //var Cua_hang = Du_lieu.Cua_hang
+        var Cua_hang = Du_lieu.Cua_hang
 
-        if (Danh_sach_The_loai.length > 0) {
-            Danh_sach_The_loai.sort((a, b) => a.Ten_the_loai.localeCompare(b.Ten_the_loai))
-            Xuat_Danh_sach(Danh_sach_The_loai, Th_Thong_bao)
+        if (Danh_sach_Tac_gia.length > 0) {
+            Danh_sach_Tac_gia.sort((a, b) => a.Tac_gia.localeCompare(b.Tac_gia))
+            Xuat_Danh_sach(Danh_sach_Tac_gia, Th_Thong_bao)
         }
         else {
             Th_Thong_bao.innerHTML = "Lỗi đọc dữ liệu"
         }
 
-        function Xuat_Danh_sach(Danh_sach_The_loai, Th_thong_bao) {
+        function Xuat_Danh_sach(Danh_sach_Tac_gia, Th_thong_bao) {
             Th_Cha.innerHTML = ""
-            Danh_sach_The_loai.forEach(The_loai => {
-                var The_hien = Tao_The_hien_The_loai(The_loai, Th_Cha)
+            Danh_sach_Tac_gia.forEach(Tac_gia => {
+                var The_hien = Tao_The_hien_Tac_gia(Tac_gia, Th_Cha)
                 The_hien.onclick = () => {
                     The_hien.childNodes[0].classList.toggle("CHON")
                 }
             });
-            Th_Thong_bao.innerHTML = `<h3>Danh sách Thể loại (${Danh_sach_The_loai.length}) </h3>`
+            Th_Thong_bao.innerHTML = `<h3>Danh sách Tác giả (${Danh_sach_Tac_gia.length}) </h3>`
         }
 
 
