--- a/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Them_Sach.html
+++ b/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Them_Sach.html
@@ -162,7 +162,7 @@
         }
 
         Th_Bo_qua.onclick = () => {
-            window.location = "MH_Danh_sach_Sach_Admin.html"
+            window.location = "MH_Danh_sach_Sach.html"
         }
 
     </script>
