--- a/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Danh_sach_Sach.html
+++ b/Ung_dung_Quan_ly_Tuan/Giao_dien/MH_Danh_sach_Sach.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
-    .CHONCHON {
+    .CHON {
         border: 1px solid blue;
         opacity: 0.5;
     }
@@ -102,7 +102,7 @@
             Danh_sach_Sach.forEach(Sach => {
                 var The_hien = Tao_The_hien_Sach(Sach, Th_Cha)
                 The_hien.onclick = () => {
-                    The_hien.childNodes[0].classList.toggle("CHONCHON")
+                    The_hien.childNodes[0].classList.toggle("CHON")
                 }
 
             });
